<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SimpleUsers</string>

    <!--splash-->
    <string name="splash">Welcome!!</string>

    <!--Login/Authorization-->
    <string name="hint_login">login</string>
    <string name="hint_password">password</string>
    <string name="hint_password_confirm">password confirm</string>
    <string name="hint_name">name</string>
    <string name="hint_email">email</string>
    <string name="ok">ok</string>
    <string name="hint_latitude">latitude</string>
    <string name="hint_logitude">logitude</string>
    <string name="cancel">cancel</string>
    <string name="hint_www">www</string>
    <string name="hint_phone">phone</string>
    <string name="ok_registration">Registration complete</string>
    <string name="ok_login">Login complete</string>
    <string name="registration">registration</string>
    <string name="login">login</string>
    <string name="users">users</string>

    <!-- ACRA crash text -->
    <string name="crash_toast_text">К сожалению, во время выполнения данной задачи произошла критическая ошибка. Можете отослать разработчикам информацию об ошибке.</string>

    <!-- Errors -->
    <string name="error_name">Error name</string>
    <string name="error_pass">Error password</string>
    <string name="error_email">Error email</string>
    <string name="error_valid_password">Passwords are not equal</string>
    <string name="error_coordinates">Users map will not be available</string>
    <string name="error_login">Error login</string>
    <string name="error_login_pass">Incorrect login or password</string>
    <string name="error_latitude">error latitude</string>
    <string name="error_logitude">error logitude</string>
    <string name="error_login_exist">this login alredy exist</string>
    <string name="error_pass_new">Error new password</string>

    <!--menu-->
    <string name="action_menu">map</string>
    <string name="action_profile">profile</string>
    <string name="action_logout">logout</string>

    <!--map-->
    <string name="users_map">map of users</string>
    <string name="you_here">you here</string>
    <string name="coordinates">coordinates</string>
    <string name="add_coordinates">Would you like to specify the coordinates?</string>
    <string name="coordinates_update">coordinates_update</string>
    <string name="google_maps_key">AIzaSyC6jSFuanFRdZX08TaJXDV3wYLFzmwJnw0</string>

    <!--profile-->
    <string name="hint_password_new">new password</string>
    <string name="ok_edit_profile">Profile edit</string>
    <string name="foto_update">foto update</string>
    <string name="dialog_type_password">type password:</string>
    <string name="edit_login_data">edit login data</string>
    <string name="edit_profile_data">edit profile data</string>

</resources>
