<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/no_avatar"
            android:id="@+id/prof_foto" />
        <TextView
            style="@style/TextViewProfile"
            android:hint="@string/hint_login" />
        <TextView
            style="@style/TextViewProfile"
            android:textSize="20dp"
            android:id="@+id/prof_login"/>
        <TextView
            style="@style/TextViewProfile"
            android:hint="@string/hint_password" />
        <EditText
            android:id="@+id/prof_password"
            style="@style/EditTextLogin"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>
        <TextView
            style="@style/TextViewProfile"
            android:hint="@string/hint_password_new" />
        <EditText
            android:id="@+id/prof_password_new"
            style="@style/EditTextLogin"
            android:hint="@string/hint_password_new"
            android:inputType="textPassword"/>
        <TextView
            style="@style/TextViewProfile"
            android:hint="@string/hint_password_confirm" />
        <EditText
            android:id="@+id/prof_password_confirm"
            style="@style/EditTextLogin"
            android:inputType="textPassword"
            android:hint="@string/hint_password_confirm" />
        <TextView
            style="@style/TextViewProfile"
            android:hint="@string/hint_name" />
        <EditText
            android:id="@+id/prof_name"
            style="@style/EditTextLogin"
            android:inputType="textPersonName"
            android:hint="@string/hint_name" />
        <TextView
            style="@style/TextViewProfile"
            android:hint="@string/hint_email" />
        <EditText
            android:id="@+id/prof_email"
            style="@style/EditTextLogin"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>
        <TextView
            style="@style/TextViewProfile"
            android:hint="@string/hint_www" />
        <EditText
            android:id="@+id/prof_www"
            style="@style/EditTextLogin"
            android:hint="@string/hint_www"
            android:inputType="textUri"/>
        <TextView
            style="@style/TextViewProfile"
            android:hint="@string/hint_phone" />
        <EditText
            android:id="@+id/prof_phone"
            style="@style/EditTextLogin"
            android:hint="@string/hint_phone"
            android:inputType="phone"/>
        <TextView
            style="@style/TextViewProfile"
            android:hint="@string/coordinates" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordinates"
            android:id="@+id/prof_coordinates"
            android:layout_gravity="left" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/prof_btn"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>